--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,6 +2,7 @@ $black: #000;
 $white: #fff;
 $red: #DE0033;
 $bg_1_color: #415A77;
+$bg_2_color: #778DA9;
 $text_1_color: #0F0F0F;
 $gray: #CBCBCB;
 $pink: #BC5D82;
